# tak

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude-plugin/: marketplace.json  plugin.json
.tak/context/: 1175f88d903de690.md  123711174b6a4404.md  1257a9358116a535.md  3697a3cd3960c0bd.md  5966f17b820fa3ca.md  (+12 more)
bench/: .gitignore  README.md  pyproject.toml  takbench.py  takbench_batch.py
crates/tak-core/: Cargo.toml
crates/tak-core/src/: agent.rs  build_info.rs  cli.rs  facade.rs  git.rs  json_ids.rs  lib.rs
crates/tak-core/src/commands/: blackboard.rs  claim.rs  create.rs  deps.rs  doctor.rs  edit.rs  import.rs  init.rs  list.rs  next.rs  reindex.rs  setup.rs  show.rs  work.rs
crates/tak-core/src/metrics/: derive.rs  tui.rs
crates/tak-core/src/store/: files.rs  index.rs  migration.rs  paths.rs  repo.rs  work.rs
docs/: README.md
hooks/: hooks.json
pi-plugin/: README.md  package.json
src/: agent.rs  error.rs  git.rs  lib.rs  main.rs  model.rs  output.rs  task_id.rs
tests/: blackboard_note_type_integration.rs  blocker_cooperation_integration.rs  coordination_db_parity_integration.rs  coordination_filters_integration.rs  id_display_phase2_integration.rs  idea_traceability_integration.rs  import_dry_run_output_integration.rs  integration.rs  list_pretty_hierarchy_integration.rs  mesh_feed_filters_integration.rs  meta_kind_regression_integration.rs  meta_output_integration.rs  metrics_completion_time_cli_integration.rs  migration_reindex_integration.rs  random_id_allocation_integration.rs  takeover_integration.rs  therapist_integration.rs  verify_scope_integration.rs  work_done_integration.rs  work_resume_policy_integration.rs
(+143 files in other folders)
