[package]
name = "tak"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
fs2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
