[package]
name = "tak"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
fs2 = "0.4"
getrandom = "0.4"
git2 = "0.20"
rusqlite = { version = "0.38", features = ["bundled", "fallible_uint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
