[package]
name = "tak-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29"
fs2 = "0.4"
getrandom = "0.4"
git2 = "0.20"
ratatui = "0.30"
rusqlite = { version = "0.38", features = ["bundled", "fallible_uint"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
